[gd_scene load_steps=2 format=2]

[ext_resource path="res://Sliders.gd" type="Script" id=1]

[node name="UI" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 432.0
margin_top = 134.0
margin_right = -425.0
margin_bottom = -155.0
script = ExtResource( 1 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Tightness" type="HSlider" parent="."]
margin_top = 12.0
margin_right = 100.0
margin_bottom = 28.0
rect_pivot_offset = Vector2( 23, 16 )
max_value = 20.0

[node name="Tightness_text" type="RichTextLabel" parent="Tightness"]
margin_left = 1.0
margin_top = 19.0
margin_right = 111.0
margin_bottom = 34.0

[node name="DJ" type="HSlider" parent="."]
margin_top = 46.0
margin_right = 100.0
margin_bottom = 62.0
rect_pivot_offset = Vector2( 23, 16 )
max_value = 7.0

[node name="DJ_text" type="RichTextLabel" parent="DJ"]
margin_left = 1.0
margin_top = 18.0
margin_right = 113.0
margin_bottom = 33.0

[node name="Volume" type="HSlider" parent="."]
margin_top = 76.0
margin_right = 100.0
margin_bottom = 92.0
max_value = 80.0

[node name="Volume_text" type="RichTextLabel" parent="Volume"]
margin_left = 1.0
margin_top = 17.0
margin_right = 109.0
margin_bottom = 32.0

[node name="Skin" type="HSlider" parent="."]
margin_left = -1.0
margin_top = 104.0
margin_right = 99.0
margin_bottom = 120.0
max_value = 4.0

[node name="Skin_text" type="RichTextLabel" parent="Skin"]
margin_left = 2.0
margin_top = 18.0
margin_right = 112.0
margin_bottom = 33.0

[node name="Driver" type="HSlider" parent="."]
margin_top = 135.0
margin_right = 100.0
margin_bottom = 151.0
max_value = 7.0

[node name="Driver_text" type="RichTextLabel" parent="Driver"]
margin_left = 1.0
margin_top = 18.0
margin_right = 119.0
margin_bottom = 33.0
fit_content_height = true

[node name="Route" type="HSlider" parent="."]
margin_top = 164.0
margin_right = 100.0
margin_bottom = 180.0
max_value = 2.0

[node name="Route_text" type="RichTextLabel" parent="Route"]
margin_left = 1.0
margin_top = 16.0
margin_right = 119.0
margin_bottom = 47.0
fit_content_height = true

[node name="Rounds" type="HSlider" parent="."]
margin_top = 205.0
margin_right = 100.0
margin_bottom = 221.0
min_value = 1.0
max_value = 10.0
value = 1.0

[node name="Rounds_text" type="RichTextLabel" parent="Rounds"]
margin_left = 1.0
margin_top = 17.0
margin_right = 119.0
margin_bottom = 32.0
fit_content_height = true

[connection signal="value_changed" from="Tightness" to="." method="_on_Tightness_value_changed"]
[connection signal="value_changed" from="DJ" to="." method="_on_DJ_value_changed"]
[connection signal="value_changed" from="Volume" to="." method="_on_Volume_value_changed"]
[connection signal="value_changed" from="Skin" to="." method="_on_Skin_value_changed"]
[connection signal="value_changed" from="Driver" to="." method="_on_Driver_value_changed"]
[connection signal="value_changed" from="Route" to="." method="_on_Route_value_changed"]
[connection signal="value_changed" from="Rounds" to="." method="_on_Rounds_value_changed"]
